chore: setup some potential components

--- a/components/index.html
+++ b/components/index.html
@@ -4,11 +4,21 @@
   <head>
     <meta charset="utf-8" />
     <title>Lit Component Demos</title>
-    <script type="module" src="./dist/basic-lit-component.js"></script>
+    <script type="module" src="./dist/asset-component.js"></script>
+    <script type="module" src="./dist/basic-component.js"></script>
+    <script type="module" src="./dist/calcite-component.js"></script>
+    <script type="module" src="./dist/i18n-component.js"></script>
+    <script type="module" src="./dist/map-component.js"></script>
+    <script type="module" src="./dist/sdk-component.js"></script>
   </head>
   <body>
-    <basic-lit-component>
+    <basic-component>
       <p>Content in Default Slot</p>
-    </basic-lit-component>
+    </basic-component>
+    <asset-component></asset-component>
+    <calcite-component></calcite-component>
+    <i18n-component></i18n-component>
+    <map-component></map-component>
+    <sdk-component></sdk-component>
   </body>
 </html>
